--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>Tourist</artifactId>
+	<artifactId>Account</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Tourist</name>
+	<name>Account</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -37,6 +37,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
