--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 management.endpoints.web.exposure.include=* 
-
+spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
 spring.datasource.url=jdbc:h2:~/test
@@ -7,3 +7,16 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#Partie ElasticSearch Config
+spring.data.elasticsearch.repositories.enabled = true
+spring.data.elasticsearch.cluster-nodes = localhost:9300
+spring.data.elasticsearch.cluster-name = elasticsearch
+
+elasticsearch.index.name=my_index
+elasticsearch.user.type= user
+
+# App Config
+server.port = 8080
+spring.application.name =BootElastic
+
